<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.activities.main.MainAgentActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways|snap"></androidx.appcompat.widget.Toolbar>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:theme="@style/AppTheme.PopupOverlay" />


        </com.google.android.material.appbar.AppBarLayout>

        <!--    <include layout="@layout/content_main" />-->

        <ProgressBar
            android:id="@+id/loading_data_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_anchor="@+id/constraintLayout"
            app:layout_anchorGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/view_pager"
            android:orientation="horizontal"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include layout="@layout/no_current_location_available"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/start_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/animation_fab_start"
                android:fitsSystemWindows="true"
                android:padding="10dp"
                android:src="@drawable/animation_fab_start"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/call_fab"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_above="@id/start_fab"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_call"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/start_fab"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/confirm_arrive_fab"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_above="@id/call_fab"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrive"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/call_fab"
                app:layout_constraintEnd_toEndOf="parent"
                app:rippleColor="@color/colorPrimaryDark" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>