<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/margin_8"
    android:id="@+id/arrive_or_checkin_list_dialog"
    android:layout_height="400dp">

    <TextView
        android:layout_margin="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/choose_patient" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alert_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
    />


</LinearLayout>
