...
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_avatar" />

        <TextView
            android:id="@+id/userNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/userImageView"
            app:layout_constraintTop_toBottomOf="@+id/userImageView" />

        <TextView
            android:id="@+id/emailTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="@dimen/fab_margin"
            app:layout_constraintStart_toStartOf="@+id/userNameTxt"
...
